add string to resource

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">RamadanApp</string>
+    <string name="back">Back</string>
+    <string name="share">Share</string>
+    <string name="save">Save</string>
+    <string name="more_videos">المزيد من الفيديوهات\n</string>
+    <string name="failed_load_videos">فشل تحميل الفيديوهات</string>
+
 </resources>
