--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,8 @@
     <string name="save">Save</string>
     <string name="more_videos">المزيد من الفيديوهات\n</string>
     <string name="failed_load_videos">فشل تحميل الفيديوهات</string>
+    <string name="notifications">Notifications</string>
+    <string name="search">Search</string>
+    <string name="welcome">أهلا بك مجدداً</string>
 
 </resources>
